# multi-agent-leetproof

./: .dockerignore  README.md  gpt-stats.json  job.json  opus-stats.json  setup.sh
docs/: progress.md
leader-election/: job.json  plan.json  project.txt
lean-worker/: Extensions.lean  lake-manifest.json  lakefile.toml  leetproof.sh
leetproof/: .gitignore  .gitmodules  EVALUATION.md  Makefile  README.md  args.py  cli.py  container.py  dafny_synth.py  formalize.py  gen_batch.py  lean_synth_and_verify.py  lloom-agent.spec  logging_config.py  mbpp_rag_data.json  pipeline.py  prepare.py  prove_from_file.py  providers.py  pyproject.toml  requirements.py  run-lloom.sh  run_batch.py  runner.py  workflow_helpers.py
leetproof/agents/: agent_state.py  base.py  dafny_synth.py  example_prover.py  lean_synth_and_verify.py  proof_guide.py  proof_reasoning_agent.py  prover_agent.py  prover_v2_agent.py  retriever_agent.py  spec_coach.py  spec_gen.py  spec_state.py  velvet_invariant_inferrer.py  velvet_judge.py  velvet_programmer.py  velvet_proof_orchestrator.py
leetproof/config/: __init__.py  constants.py  limits.py  model_pricing.json  timeouts.py
leetproof/evals/: __init__.py  clever_to_lean.py  dataset.py  mbpp.py  run_pbt_batch.py  verina.py  verina_to_lean.py
leetproof/evals/benchmarks/: mbpp-san-velvet-228.json
leetproof/evals/benchmarks/custom/: canyon_search.txt  sliding_window_maximum.txt
leetproof/hooks/: pyinstaller_runtime.py
leetproof/prompts/: ExampleProver.md  FormalizeContract.md  ProofGuide.md  RequirementsGen.md  SpecCoach.md  SpecGen.md  dafny_synthesizer.md  lean_synthesizer.md  prompts.py  velvet_documentation.md  velvet_invariant_inferrer.md  velvet_judge.md  velvet_programmer.md
leetproof/scripts/: analyze.py  aristotle_submit.py  effectiveness_analysis_types.py  effectiveness_check.py  get_sorried_files.py  lean_explore_cli.py  poc_tactic_recovery.py  poc_tactic_recovery_stress.py  summarize_attempts.py  test_essential_vars.py  test_ghost_vars.py  test_pantograph.py  test_proof_search_cases.py  visualize_effectiveness.py
leetproof/stages/: README.md  __init__.py  code_generate.py  invariant_generate.py  spec_generate.py  spec_pbt.py  spec_validate.py  verification.py
leetproof/tests/: conftest.py  test_analytics_helpers.py  test_analytics_query_cli.py  test_analyze_discovery.py  test_aristotle_submit.py  test_differ.py  test_example_verify.py  test_file_helpers.py  test_formalize.py  test_invariant_difficulty.py  test_lean_build.py  test_lean_comment_helpers.py  test_lean_explore_service.py  test_lean_file_parser.py  test_lean_goals.py  test_lean_helpers.py  test_lean_proof_helpers.py  test_lean_proof_parser.py  test_pantograph_client.py  test_parse_lean_goals_multiline.py  test_prepare.py  test_program_state.py  test_proof_search.py  test_prover_agent.py  test_replace_sorry.py  test_shutdown.py  test_unused_var_removal.py  test_velvet_helpers.py  test_velvet_invariant_inferrer.py  test_velvet_test_cases_parser.py  test_worker_pipeline.py  test_workflows_cli.py  try_all_tactics_demo.py
leetproof/tools/: __init__.py  automation.py  common.py  file_ops.py  lean_build.py  lean_explore_tool.py  mcp_tools.py  pantograph_client.py  proof_search.py  proof_search_viz.py  spec_gen_tools.py
leetproof/tui/: __init__.py  app.py  log_handler.py  replay.py  runner.py  snapshot.py  state.py
leetproof/utils/: __init__.py  agent_context.py  aristotle_helpers.py  build_spec_rag_database.py  context_utils.py  dbos_inspect.py  dbos_utils.py  differ.py  escalation.py  example_verify.py  file_helpers.py  lean_explore_service.py  lean_helpers.py  lean_proof_parser.py  markdown_helpers.py  message_constants.py  message_helpers.py  naming.py  program_state.py  prompt_helpers.py  proof_types.py  shutdown.py  sorry_extraction.py  spec_bug_finder.py  spec_rag.py  token_tracker.py  validation.py  validation_result.py  velvet_helpers.py  velvet_types.py
leetproof/utils/analytics/: __init__.py  common.py  general.py  lean_synth_and_verify.py  query.py  spec_generation.py  store.py  velvet_invariant_inferrer.py  velvet_programmer.py
leetproof/utils/lean/: __init__.py  build.py  constants.py  goals.py  normalization.py  parser.py  transform.py  types.py  unused_var_removal.py
llmgen-experiment/: .gitignore  failing-proof.md  input_verina_advanced_1.txt  lake-manifest.json  lakefile.toml  leetproof.sh  power_of_four.txt  (+3 more)
(+1384 files in other folders)
