[project]
name = "lloom-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbos>=1.0.0",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.1.0",
    "langchain-cerebras>=0.7.0",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "langchain-groq>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langchain-mcp-tools>=0.2.0",
    "websockets>=13.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "flagembedding>=1.2.0",
    "grandalf>=0.8",
    "clever-bench>=1.3.0",
    "parsy>=2.2",
    "textual>=6.0.0",
    "lean-xplore>=0.4.3",
    "mistune>=3.0.0",
    "pantograph",
    "nest-asyncio>=1.6.0",
    "sexpdata>=1.0.2",
    "aristotlelib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
lloom-agent = "cli:main"
lloom-agent-pipeline = "pipeline:main"
lloom-agent-replay = "tui.replay:main"
lloom-agent-invariant-inferrer = "agents.velvet_invariant_inferrer:main"
lloom-agent-programmer = "agents.velvet_programmer:main"
lloom-agent-proof-orchestrator = "agents.velvet_proof_orchestrator:main"
lloom-agent-lean-synth = "agents.lean_synth_and_verify:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "tools*", "utils*", "config*", "prompts*", "tui*", "evals*", "scripts*", "stages*"]

[tool.setuptools.package-data]
prompts = ["*.md"]
config = ["*.json"]
"evals.benchmarks" = ["*.json"]

[tool.setuptools]
py-modules = ["cli", "args", "providers", "logging_config", "workflow_helpers", "pipeline", "container", "run_batch", "gen_batch", "aristotle_submit", "prove_from_file"]

[tool.ty.src]
exclude = [
    "*-worktree",
    ".venv",
    "build",
    "dist",
]

[tool.ty.rules]
missing-typed-dict-key = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"

[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph", rev = "da25cce" }
