[project]
name = "lloom-agent"
version = "0.1.0"
description = "Natural-language specification preparation and verified Lean/Velvet implementation worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbos>=1.0.0",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.1.0",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langchain-mcp-tools>=0.2.0",
    "websockets>=13.0",
    "parsy>=2.2",
    "lean-xplore>=0.4.3",
    "mistune>=3.0.0",
    "pantograph",
    "nest-asyncio>=1.6.0",
    "sexpdata>=1.0.2",
    "psutil>=7.2.2",
    "textual>=8.2.8",
    "torch>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ty>=0.0.61",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
lloom-agent = "cli:main"
lloom-agent-lean-synth = "agents.lean_synth_and_verify:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "tools*", "utils*", "config*", "prompts*", "scripts*"]

[tool.setuptools.package-data]
prompts = ["*.md"]
config = ["*.json"]

[tool.setuptools]
py-modules = ["cli", "args", "providers", "logging_config", "workflow_helpers", "pipeline", "prepare", "formalize", "requirements", "runner", "container", "prove_from_file"]

[tool.ty.src]
exclude = [
    "*-worktree",
    ".venv",
    "build",
    "dist",
]

[tool.ty.rules]
missing-typed-dict-key = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"

[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph", rev = "da25cce" }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
